[gd_scene load_steps=6 format=2]

[ext_resource path="res://StyleBoxFlat_Dark.tres" type="StyleBox" id=1]
[ext_resource path="res://Scripts/TropeHandler.gd" type="Script" id=2]
[ext_resource path="res://Fonts/PIXELOIDSANS.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 3 )

[node name="SceneHandler" type="Node2D"]

[node name="TropeHandler" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="TropeHandler"]

[node name="BasePanel" type="Panel" parent="TropeHandler/UI"]
anchor_left = 0.125
anchor_top = 0.1
anchor_right = 0.875
anchor_bottom = 0.9
margin_right = -6.10352e-05

[node name="Button" type="Button" parent="TropeHandler/UI/BasePanel"]
anchor_left = 0.687
anchor_top = 0.117
anchor_right = 0.979
anchor_bottom = 0.275
margin_left = 0.383972
margin_top = -0.160004
margin_right = 0.127991
text = "Roll"

[node name="SpinBox" type="SpinBox" parent="TropeHandler/UI/BasePanel"]
anchor_left = 0.687
anchor_top = 0.033
anchor_right = 0.979
anchor_bottom = 0.1
margin_left = 0.383972
margin_top = 0.16
margin_right = 0.127991
rounded = true

[node name="TropeTitlePanel" type="Panel" parent="TropeHandler/UI/BasePanel"]
anchor_left = 0.021
anchor_top = 0.033
anchor_right = 0.667
anchor_bottom = 0.275
margin_left = -0.128002
margin_top = 0.16
margin_right = -0.256042
custom_styles/panel = ExtResource( 1 )

[node name="TropeLabel" type="Label" parent="TropeHandler/UI/BasePanel/TropeTitlePanel"]
anchor_left = 0.032
anchor_right = 0.968
anchor_bottom = 1.0
margin_left = 0.127999
margin_right = -0.128021
custom_fonts/font = SubResource( 1 )
text = "Trope"
align = 1
valign = 1
autowrap = true

[node name="TropeDescPanel" type="Panel" parent="TropeHandler/UI/BasePanel"]
anchor_left = 0.021
anchor_top = 0.342
anchor_right = 0.979
anchor_bottom = 0.967
margin_left = -0.128002
margin_top = -0.160004
margin_right = 0.127991
margin_bottom = -0.160034
custom_styles/panel = ExtResource( 1 )

[node name="TropeDescLabel" type="Label" parent="TropeHandler/UI/BasePanel/TropeDescPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
text = "Trope Description"
autowrap = true

[node name="SourceLabel" type="Label" parent="TropeHandler/UI/BasePanel"]
anchor_left = 0.005
anchor_top = 0.967
anchor_right = 0.161
anchor_bottom = 1.0
margin_left = 0.16
margin_top = -0.160034
margin_right = 0.35199
custom_fonts/font = SubResource( 2 )
text = "Source: tvtropes.org"

[connection signal="pressed" from="TropeHandler/UI/BasePanel/Button" to="TropeHandler" method="_on_Button_pressed"]
[connection signal="value_changed" from="TropeHandler/UI/BasePanel/SpinBox" to="TropeHandler" method="_on_SpinBox_value_changed"]
